@@ -1,4 +1,4 @@
-rev 14-Apr_17-11_19
+rev 14-May_19-08_37
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -355,3 +355,10 @@ Support for alternate savedir where dokuwiki root is domain
 
 17 Apr
 Handle entities in URLs; requires URL to be entered using the link tool.
+
+14 May
+Updated plugin.info.txt from fckgLite to fckg
+
+19 May
+Changed DOKU_URL to DOKU_BASE to access script-cmpr.js; requested to 
+accommdate fckg behind an Apache reverse proxy.
